<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.MainActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:background="@color/purple"
            android:layout_height="wrap_content"
            android:paddingVertical="12dp"
            android:orientation="horizontal">

        <ImageView
                android:id="@+id/image_all"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:contentDescription="@string/random_frase"
                android:src="@drawable/ic_all"
                android:layout_weight="3" />

        <ImageView
                android:id="@+id/image_emoji"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:contentDescription="@string/happy_phrase"
                android:src="@drawable/ic_emoji"
                android:layout_weight="3" />

        <ImageView
                android:id="@+id/image_sun"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:contentDescription="@string/sun_phrase"
                android:src="@drawable/ic_sun"
                android:layout_weight="3" />


    </LinearLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="32dp">

        <TextView
                android:id="@+id/text_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hello"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/cabin" />

        <TextView
                android:id="@+id/text_phrase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/motivation"
                android:layout_marginTop="32dp"
                android:textSize="22sp"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:layout_centerInParent="true"
                android:layout_marginHorizontal="32dp"
                android:fontFamily="@font/cabin" />

        <View
                android:layout_width="124dp"
                android:layout_height="3dp"
                android:elevation="4dp"
                android:layout_below="@+id/text_phrase"
                android:layout_marginTop="18dp"
                android:layout_centerHorizontal="true"
                android:background="@color/dark_purple" />

        <Button
                android:id="@+id/button_new_phrase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_generate"
                android:textAllCaps="true"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:backgroundTint="@color/dark_purple"
                android:fontFamily="@font/cabin"
                app:cornerRadius="4dp" />

    </RelativeLayout>

</LinearLayout>